Adjusted home page

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -8,16 +8,18 @@
             <p class="card-text">A solution aimed towards students living in shared accommodation.</p>
             <p class="card-text">It allows them to track events in the building, manage joint expenses, arrange agreements and much more.</p>
             <div class="mb-2">
-              <a class="btn btn-primary mr-2" href="https://drive.google.com/uc?export=download&id=1BJtxnYU0v0-Zk4Ff5VQsJp1gWKnY1z5v">
-                <i class="fas fa-download mr-2"></i>
+              <a class="btn btn-primary mb-2 mr-2" href="https://drive.google.com/uc?export=download&id=1BJtxnYU0v0-Zk4Ff5VQsJp1gWKnY1z5v">
+                <i class="fas fa-fw fa-download mr-2"></i>
                 Download Now
               </a>
-              <a class="btn btn-dark" href="/docs/index.html">
-                <i class="fas fa-book mr-2"></i>
+              <a class="btn btn-dark mb-2 mr-2" href="/docs/index.html">
+                <i class="fas fa-fw fa-book mr-2"></i>
                 Explore Documentation
               </a>
             </div>
-            <a class="d-block card-link" href="https://drive.google.com/drive/folders/1QGk0SXmVfro7mZXw3LmbsR-f0iRK_Bh_" target="_blank">View all available versions</a>
+            <a class="card-link" href="https://drive.google.com/drive/folders/1QGk0SXmVfro7mZXw3LmbsR-f0iRK_Bh_" target="_blank">
+              View all available versions
+            </a>
           </div>
         </div>
       </div>
